wcfsetup/install/files/style/bbcode/inlineCode.scss
.inlineCode, /* deprecated, legacy class */
kbd {
	background-color: rgba(255, 255, 255, 1) !important;
	border: 1px solid rgba(196, 196, 196, 1) !important;
	border-radius: 2px;
	color: rgba(68, 68, 68, 1) !important;
	display: inline-block;
	font-family: Consolas, 'Courier New', monospace;
	margin: 0 2px;
	padding: 0 4px;
	word-break: break-all;
	word-wrap: break-word;
}

